# GTEST_GradeBook

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: course.h  gradebook.h  student.h
src/: course.cpp  gradebook.cpp  student.cpp
tests/: CMakeLists.txt  test_Student.cpp  tests_student.cpp
